<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pixel_parts_title">Pixel Parts</string>
    <string name="pixel_parts_summary">Configure device specific settings</string>
    <string name="pixel_parts_warning_title">Warning</string>
    <string name="pixel_parts_warning_text">Most of these features rely on specific kernel nodes in order to function. When flashing a custom kernel, you risk the possibility of losing access to some of these features. You have been warned!</string>
    <string name="pixel_parts_dialog">OK</string>
    <string name="pixel_parts_about_title">About</string>
    <string name="pixel_parts_about_summary">PixelParts began as a simple High Brightness Mode (HBM) tool. Since then, it has evolved to include a detailed battery information panel, a display saturation level adjuster, charging limiter and more. The app now offers a wide range of features, transitioning from its original function as an HBM tool to a hub for device tweaks and stats on customs, with a lot more planned going forward</string>
    <string name="about_category_links">Various links</string>
    <string name="about_category_credit">Credit</string>
    <string name="pixel_parts_github_title" translatable="false">GitHub</string>
    <string name="pixel_parts_github_summary">Check out the GitHub repository</string>
    <string name="pixel_parts_xda_title" translatable="false">XDA</string>
    <string name="pixel_parts_xda_summary">Check out the XDA thread</string>
    <string name="pixel_parts_developer_title">Developer</string>
    <string name="pixel_parts_developer_summary" translatable="false">Anierin Bliss</string>
    <string name="kernel_node_access_error">Kernel node access failed! Please ensure the provided path to the sysfs or procfs attribute is accurate, that it has appropriate permissions, and the SELinux policies are properly configured.</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="category_battery">Battery</string>
    <string name="battery_info_title">Battery info</string>
    <string name="battery_info_summary">View various battery information</string>
    <string name="battery_info_refresh_title">Refresh info every second</string>
    <string name="launch_battery_usage_title">Launch battery usage summary</string>
    <string name="category_battery_info">Available info</string>
    <string name="technology_title">Technology</string>
    <string name="technology_info_title">Technology information</string>
    <string name="technology_info_message">
    Li-ion (Lithium-ion):\n\nWidely used in smartphones and many electronic devices, Li-ion batteries provide high energy density, lightweight design, and relatively low self-discharge rate.\n\n
    NiMH (Nickel Metal Hydride):\n\nOffering a good balance between capacity and cost, NiMH batteries are commonly used in certain devices.\n\n
    Li-poly (Lithium Polymer):\n\nSimilar to Li-ion batteries, Li-poly batteries have a flexible and lightweight form factor. They are often used in slim devices where space is a concern.\n\n
    LiFe (Lithium Iron Phosphate):\n\nProviding a longer lifespan, enhanced safety, and better temperature tolerance, LiFe batteries are commonly used in applications prioritizing durability and stability.\n\n
    NiCd (Nickel Cadmium):\n\nAn older technology with lower energy density and higher self-discharge rate, NiCd batteries are less common nowadays due to environmental concerns.\n\n
    LiMn (Lithium Manganese):\n\nA variant of Li-ion batteries, LiMn batteries offer high power output and stability, making them suitable for applications requiring high current.\n\n
    In smartphones, Li-ion batteries are the most commonly used technology due to their optimal balance of performance, capacity, and safety.
    </string>
    <string name="status_title">Status</string>
    <string name="status_info_title">Status information</string>
    <string name="status_info_message">
    Unknown:\n\nThe status of the device is currently unknown.\n\n
    Charging:\n\nThe device is currently being charged.\n\n
    Discharging:\n\nThe device is currently discharging its battery.\n\n
    Not charging:\n\nThe device is connected but not actively charging its battery.
    </string>
    <string name="status_unknown">Unknown</string>
    <string name="status_charging">Charging</string>
    <string name="status_discharging">Discharging</string>
    <string name="status_not_charging">Not charging</string>
    <string name="status_full">Full</string>
    <string name="usb_type_title">USB type</string>
    <string name="usb_type_info_title">USB type information</string>
    <string name="usb_type_info_message">
    Standard Downstream Port (SDP):\n\nThis is the most basic form of USB connection. It can be used for data transfer and also to supply power, but it doesn\'t have any special features for charging devices more quickly.\n\n
    Charging Downstream Port (CDP):\n\nThis type of USB connection also supports data transfer, but it can supply more power than an SDP port. This means it can charge devices more quickly while still allowing for data transfer. CDPs were introduced in the USB Battery Charging Specification (Revision 1.2), to address the need of charging batteries of portable devices.\n\n
    Dedicated Charging Port (DCP):\n\nThis type of USB connection doesn\'t support data transfer at all. It\'s only used for charging devices, and it can usually supply even more power than a CDP port. DCP is used when there is a need for more power to charge a device but no data transfer is needed.
    </string>
    <string name="usb_type_unknown_or_not_connected">Not connected or unknown</string>
    <string name="usb_type_standard_downstream_port">Standard Downstream Port (SDP)</string>
    <string name="usb_type_charging_downstream_port">Charging Downstream Port (CDP)</string>
    <string name="usb_type_dedicated_charging_port">Dedicated Charging Port (DCP)</string>
    <string name="temperature_title">Temperature</string>
    <string name="temperature_info_title">Temperature information</string>
    <string name="temperature_info_message">Temperature refers to the degree of hotness or coldness, measured in Celsius (°C) or Fahrenheit (°F). High temperatures can impact device performance and lifespan. Recommended operating ranges for smartphones are typically between 0°C and 35°C (32°F and 95°F). Monitoring temperature ensures devices stay within the safe range, preventing overheating and damage. Maintaining suitable temperatures contributes to optimal performance and longevity.</string>
    <string name="temperature_unit_title">Use °F for temperature</string>
    <string name="capacity_title">Capacity now</string>
    <string name="capacity_info_title">Capacity information</string>
    <string name="capacity_info_message">Capacity refers to the current charge level of the battery, represented as a percentage of its overall capacity. It indicates how much charge is currently available compared to the maximum capacity. Monitoring the capacity level in percentage helps estimate the remaining battery power and plan power usage accordingly.</string>
    <string name="capacity_level_title">Capacity level</string>
    <string name="capacity_level_info_title">Capacity level information</string>
    <string name="capacity_level_info_message">
    Unknown:\n\nThe current battery capacity level is unknown.\n\n
    Critical:\n\nThe battery capacity is critically low. Immediate charging is recommended.\n\n
    Low:\n\nThe battery capacity is low. Consider charging the device.\n\n
    Normal:\n\nThe battery capacity is at a normal level.\n\n
    High:\n\nThe battery capacity is relatively high. No immediate charging is required.\n\n
    Full:\n\nThe battery capacity is at full capacity. The device is fully charged.
    </string>
    <string name="capacity_level_unknown">Unknown</string>
    <string name="capacity_level_critical">Critical</string>
    <string name="capacity_level_low">Low</string>
    <string name="capacity_level_normal">Normal</string>
    <string name="capacity_level_high">High</string>
    <string name="capacity_level_full">Full</string>
    <string name="current_title">Current</string>
    <string name="current_info_title">Current information</string>
    <string name="current_info_message">Current refers to the flow of electric charge in a circuit, measured in milliamperes (mA). It represents the rate at which electric charge is flowing. The current value indicates the amount of charge being charged or discharged by a device. Monitoring the current value helps track the flow of power and manage the charging or discharging process effectively.</string>
    <string name="voltage_title">Voltage</string>
    <string name="voltage_info_title">Voltage information</string>
    <string name="voltage_info_message">Voltage refers to the electrical potential difference in a circuit, measured in volts (V). It determines the behavior and functionality of electrical devices. Matching the required voltage ensures proper device operation, while incorrect voltage levels can cause damage or malfunction.</string>
    <string name="wattage_title">Wattage</string>
    <string name="wattage_info_title">Wattage information</string>
    <string name="wattage_info_message">Wattage refers to the amount of electrical power consumed or produced by a device. It is calculated by multiplying the voltage by the current (Wattage = Voltage × Current). Understanding wattage helps determine power requirements, device capabilities, and ensures safe operation of electrical devices.</string>
    <string name="health_title">Health</string>
    <string name="health_info_title">Health information</string>
    <string name="cycle_count_title">Cycle count</string>
    <string name="stop_charging_title">Stop charging level</string>
    <string name="stop_charging_summary">Prevent the device from charging over a specific percentage</string>
    <string name="start_charging_title">Start charging level</string>
    <string name="start_charging_summary">Resume charging at a specific percentage</string>
    <string name="category_camera">Camera</string>
    <string name="torch_strength_title">Torch strength</string>
    <string name="torch_strength_summary">Adjust the brightness of the Pixel Torch QS-Tile</string>
    <string name="category_cpu">CPU</string>
    <string name="power_efficient_workqueue_title">Power efficient workqueue</string>
    <string name="power_efficient_workqueue_summary">Save power by rescheduling work to a core that is already awake</string>
    <string name="category_display">Display</string>
    <string name="hbm_title">High brightness mode (HBM)</string>
    <string name="hbm_summary">Directly enable high brightness mode</string>
    <string name="auto_hbm_title">Automatic HBM</string>
    <string name="auto_hbm_summary">Automatically enable high brightness mode based on sunlight intensity (lux)</string>
    <string name="hbm_info">Long time usage of High brightness mode may damage your display!</string>
    <string name="saturation_title">Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="category_uibench">UiBench</string>
    <string name="jitter_test_title">Jitter</string>
    <string name="jitter_test_summary">Calculate rendering jitter</string>
    <string name="category_usb">USB</string>
    <string name="usb2_fast_charge_title">USB 2.0 fast charge</string>
    <string name="usb2_fast_charge_summary">Enable CDP mode for fast charging on USB 2.0 ports</string>
    <string name="usb2_fast_charge_info">Caution: Not all USB 2.0 ports support CDP mode. For changes to take effect, disconnect and reconnect the device after enabling or disabling this mode.</string>
</resources>