<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 The Evolution X Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.pixelparts">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="device_intro"/>

    <!-- Start of Battery category -->
    <PreferenceCategory  
        android:key="category_battery"
        android:title="@string/category_battery">

        <Preference
            android:key="battery_info"
            android:title="@string/battery_info_title"
            android:summary="@string/battery_info_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.pixelparts"
                    android:targetClass="org.evolution.pixelparts.batteryinfo.BatteryInfoActivity" />
        </Preference>

        <org.evolution.pixelparts.preferences.CustomSeekBarPreference
            android:key="stop_charging"
            android:title="@string/stop_charging_title"
            android:summary="@string/stop_charging_summary"
            android:persistent="true"
            android:max="100"
            android:min="1"
            settings:units=""
            android:defaultValue="100" />

        <org.evolution.pixelparts.preferences.CustomSeekBarPreference
            android:key="start_charging"
            android:title="@string/start_charging_title"
            android:summary="@string/start_charging_summary"
            android:persistent="true"
            android:max="99"
            android:min="0"
            settings:units=""
            android:defaultValue="0" />
    </PreferenceCategory>

    <!-- Start of Camera category -->
    <PreferenceCategory  
        android:key="category_camera"
        android:title="@string/category_camera">

        <org.evolution.pixelparts.preferences.CustomSeekBarPreference
            android:key="torch_strength"
            android:title="@string/torch_strength_title"
            android:summary="@string/torch_strength_summary"
            android:persistent="true"
            android:max="45"
            android:min="1"
            settings:units=""
            android:defaultValue="45" />
    </PreferenceCategory>

    <!-- Start of CPU category -->
    <PreferenceCategory  
        android:key="category_cpu"
        android:title="@string/category_cpu">

        <SwitchPreference
            android:key="power_efficient_workqueue"
            android:title="@string/power_efficient_workqueue_title"
            android:summary="@string/power_efficient_workqueue_summary" />
    </PreferenceCategory>

    <!-- Start of display category -->
    <PreferenceCategory  
        android:key="category_display"
        android:title="@string/category_display">

        <SwitchPreference
            android:key="hbm"
            android:title="@string/hbm_title"
            android:summary="@string/hbm_summary" />

        <Preference
            android:key="auto_hbm_settings"
            android:title="@string/auto_hbm_title"
            android:summary="@string/auto_hbm_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.pixelparts"
                    android:targetClass="org.evolution.pixelparts.autohbm.AutoHBMActivity" />
        </Preference>

        <Preference
            android:key="hbm_info"
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/hbm_info"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="saturation_settings"
            android:title="@string/saturation_title"
            android:summary="@string/saturation_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.pixelparts"
                    android:targetClass="org.evolution.pixelparts.saturation.SaturationActivity" />
        </Preference>
    </PreferenceCategory>

    <!-- Start of UiBench Category -->
    <PreferenceCategory
        android:key="category_uibench"
        android:title="@string/category_uibench">

        <Preference
            android:key="jitter"
            android:title="@string/jitter_test_title"
            android:summary="@string/jitter_test_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.evolution.pixelparts"
                    android:targetClass="org.evolution.pixelparts.uibench.JitterTestActivity" />
        </Preference>
    </PreferenceCategory>

    <!-- Start of usb category -->
    <PreferenceCategory
        android:key="category_usb"
        android:title="@string/category_usb">

        <SwitchPreference
            android:key="usb2_fast_charge"
            android:title="@string/usb2_fast_charge_title"
            android:summary="@string/usb2_fast_charge_summary" />

        <Preference
            android:key="usb2_fast_charge_info"
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/usb2_fast_charge_info"
            android:selectable="false"   
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
