<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Evolution X Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="technology"
        android:title="@string/technology_title"
        android:selectable="false" />

    <Preference
        android:key="status"
        android:title="@string/status_title"
        android:selectable="false" />

    <Preference
        android:key="usb_type"
        android:title="@string/usb_type_title"
        android:selectable="false" />

    <Preference
        android:key="temperature"
        android:title="@string/temperature_title"
        android:selectable="false" />

    <Preference
        android:key="capacity"
        android:title="@string/capacity_title"
        android:selectable="false" />

    <Preference
        android:key="capacity_level"
        android:title="@string/capacity_level_title"
        android:selectable="false" />

    <Preference
        android:key="current"
        android:title="@string/current_title"
        android:selectable="false" />

    <Preference
        android:key="voltage"
        android:title="@string/voltage_title"
        android:selectable="false" />

    <Preference
        android:key="wattage"
        android:title="@string/wattage_title"
        android:selectable="false" />

    <Preference
        android:key="health"
        android:title="@string/health_title"
        android:selectable="false" />

    <Preference
        android:key="cycle_count"
        android:title="@string/cycle_count_title"
        android:selectable="false" />
</PreferenceScreen>
