<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 The Evolution X Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.pixelparts">

    <!-- Start of Battery info -->
    <PreferenceCategory  
        android:key="battery_information"
        android:title="@string/category_battery_info">

        <Preference
            android:key="technology"
            android:title="@string/technology_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="status"
            android:title="@string/status_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="temperature"
            android:title="@string/temperature_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="capacity"
            android:title="@string/capacity_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="capacity_level"
            android:title="@string/capacity_level_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="current"
            android:title="@string/current_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="voltage"
            android:title="@string/voltage_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="wattage"
            android:title="@string/wattage_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="health"
            android:title="@string/health_title"
            android:selectable="false"
            android:persistent="false" />

        <Preference
            android:key="cycle_count"
            android:title="@string/cycle_count_title"
            android:selectable="false"
            android:persistent="false" />

        <org.evolution.pixelparts.preferences.CustomSeekBarPreference
            android:key="battery_info_refresh"
            android:summary="@string/battery_info_refresh_summary"
            android:persistent="true"
            android:max="5"
            android:min="1"
            settings:units=""
            android:defaultValue="5" />
    </PreferenceCategory>
</PreferenceScreen>
