<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 The Evolution X Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.evolution.pixelparts">

    <PreferenceScreen
        android:key="evolution_logo"
        android:layout="@layout/evolution_logo">
    </PreferenceScreen>

    <Preference
        android:key="pixel_parts_about_summary"
        android:summary="@string/pixel_parts_about_summary"
        android:selectable="false" />

    <!-- Start of links category -->
    <PreferenceCategory  
        android:key="about_category_links"
        android:title="@string/about_category_links">

        <Preference
            android:key="pixel_parts_github"
            android:title="@string/pixel_parts_github_title"
            android:summary="@string/pixel_parts_github_summary"
            android:icon="@drawable/ic_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Evolution-X-Devices/packages_apps_PixelParts" />
        </Preference>

        <Preference
            android:key="pixel_parts_xda"
            android:title="@string/pixel_parts_xda_title"
            android:summary="@string/pixel_parts_xda_summary"
            android:icon="@drawable/ic_xda">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://forum.xda-developers.com/t/app-pixelparts-v1-0-customs.4596043/" />
        </Preference>
    </PreferenceCategory>

    <!-- Start of credit category -->
    <PreferenceCategory  
        android:key="about_category_credit"
        android:title="@string/about_category_credit">

        <Preference
            android:key="pixel_parts_developer"
            android:title="@string/pixel_parts_developer_title"
            android:summary="@string/pixel_parts_developer_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/Anierin_Bliss" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
